# dog-breed-classifier

./: .gitignore  LICENSE  README.md  build.sh  environment.yml  pyproject.toml  read_config.py  setup.cfg
src/: app.py  utils.py
src/dog_breed_classifier/: app.py  utils.py
