[metadata]
name = dog_breed_classifier
version = 0.0.8
author = Michael Gross
author_email = leachimgross@gmail.com
description = Dog Breed Classifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gro1m/dog-breed-classifier
project_urls =
    Bug Tracker = https://github.com/gro1m/dog-breed-classifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
setup_requires =
    setuptools>=57.5
    setuptools_scm[toml]>=6.3.1
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
install_requires =
    numpy ~=1.19.2 # because of: https://github.com/tensorflow/tensorflow/blob/r2.6/tensorflow/tools/pip_package/setup.py#L81
    opencv-python ~= 4.5.4
    tensorflow ~= 2.6.2

[options.package_data]
* = *.hdf5, *.xml

[options.packages.find]
where = src